--- a/index.html
+++ b/index.html
@@ -35,137 +35,145 @@
       </div>
     </header>
     <main>
-      <div class="main-order container section">
-        <h1 class="title">Efektywne rozwiązania dla waszego biznesu</h1>
-        <button class="order-button" type="button">Zamów usługe</button>
+      <div class="dark-background">
+        <div class="container section">
+          <h1 class="title">Efektywne rozwiązania dla waszego biznesu</h1>
+          <button class="order-button" type="button">Zamów usługe</button>
+        </div>
       </div>
-      <section class="container section">
-        <ul class="article-flex-container">
-          <li>
-            <article>
-              <h3 class="article-title">Lorem ipsum</h3>
-              <p class="main-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="article-title">Lorem ipsum</h3>
-              <p class="main-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="article-title">Lorem ipsum</h3>
-              <p class="main-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="article-title">Lorem ipsum</h3>
-              <p class="main-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
-        </ul>
-      </section>
-      <section class="container section negative-margin-top">
-        <h2 class="section-title">Czym się zajmujemy</h2>
-        <div class="images-flex-container">
-        <img
-          src="./images/img1.jpg"
-          alt="hands typing code on a keyboard"
-          width="370"
-          height="294"
-        />
-        <img
-          src="./images/img2.jpg"
-          alt="woman with a phone in her hand looking at phone interfaces"
-          width="370"
-          height="294"
-        />
-        <img
-          src="./images/img3.jpg"
-          alt="person using a graphics tablet"
-          width="370"
-          height="294"
-        />
+      <section class="white-background">
+        <div class="container section">
+          <ul class="article-flex-container">
+            <li>
+              <article>
+                <h3 class="article-title">Lorem ipsum</h3>
+                <p class="main-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="article-title">Lorem ipsum</h3>
+                <p class="main-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="article-title">Lorem ipsum</h3>
+                <p class="main-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="article-title">Lorem ipsum</h3>
+                <p class="main-description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+                  vel arcu sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
+          </ul>
         </div>
       </section>
-      <section class="container section grey-background">
-        <h2 class="section-title">Nasz zespół</h2>
-        <ul class="workers-list">
-          <li>
-            <figure>
-              <img
-                src="./images/worker1.jpg"
-                alt="picture of John Doe"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <span class="worker-name">John Doe</span>
-                <span class="worker-job">Product Designer</span>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./images/worker2.jpg"
-                alt="picture of John Doe"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <span class="worker-name">John Doe</span>
-                <span class="worker-job">Frontend Developer</span>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./images/worker3.jpg"
-                alt="picture of John Doe"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <span class="worker-name">John Doe</span>
-                <span class="worker-job">Marketing</span>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./images/worker4.jpg"
-                alt="picture of John Doe"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <span class="worker-name">John Doe</span>
-                <span class="worker-job">UI Designer</span>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+      <section class="white-background">
+        <div class="container section negative-margin-top">
+          <h2 class="section-title">Czym się zajmujemy</h2>
+          <div class="images-flex-container">
+            <img
+              src="./images/img1.jpg"
+              alt="hands typing code on a keyboard"
+              width="370"
+              height="294"
+            />
+            <img
+              src="./images/img2.jpg"
+              alt="woman with a phone in her hand looking at phone interfaces"
+              width="370"
+              height="294"
+            />
+            <img
+              src="./images/img3.jpg"
+              alt="person using a graphics tablet"
+              width="370"
+              height="294"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="grey-background">
+        <div class="container section">
+          <h2 class="section-title">Nasz zespół</h2>
+          <ul class="workers-list">
+            <li>
+              <figure>
+                <img
+                  src="./images/worker1.jpg"
+                  alt="picture of John Doe"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <span class="worker-name">John Doe</span>
+                  <span class="worker-job">Product Designer</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="./images/worker2.jpg"
+                  alt="picture of John Doe"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <span class="worker-name">John Doe</span>
+                  <span class="worker-job">Frontend Developer</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="./images/worker3.jpg"
+                  alt="picture of John Doe"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <span class="worker-name">John Doe</span>
+                  <span class="worker-job">Marketing</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="./images/worker4.jpg"
+                  alt="picture of John Doe"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <span class="worker-name">John Doe</span>
+                  <span class="worker-job">UI Designer</span>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer>
-      <div class="container-footer">
+    <footer class="dark-background">
+      <div class="container-footer section container">
         <a class="logo" href="./index.html"
           >Web<span class="logo-white">Studio</span></a
         >
